- Removing uses of JDK 5 APIs.